force-app/main/default/objects/Case/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>