force-app/main/default/objects/Case/fields/Comentarios_Bodega__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Bodega__c</fullName>
    <label>Comentarios Bodega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>