force-app/main/default/objects/Case/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote.Estado_en_SAP__c</field>
            <operation>equals</operation>
            <value>Orden de Venta Creada</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>