force-app/main/default/objects/Case/fields/DescItems__c.field-meta.xml
<CustomField>
    <fullName>DescItems__c</fullName>
    <label>Items</label>
    <type>TextArea</type>
</CustomField>