force-app/main/default/objects/Case/fields/EM_Aprobar__c.field-meta.xml
<CustomField>
    <fullName>EM_Aprobar__c</fullName>
    <label>Resolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>