force-app/main/default/objects/Case/fields/EM_MotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>EM_MotivoRechazo__c</fullName>
    <label>Motivo Rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EM_Aprobar__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falta Información</fullName>
            </value>
            <value>
                <fullName>No cubre garantía</fullName>
            </value>
            <value>
                <fullName>Garantía fuera de plazo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>