force-app/main/default/objects/Case/fields/EmailContacto__c.field-meta.xml
<CustomField>
    <fullName>EmailContacto__c</fullName>
    <label>Email Contacto</label>
    <type>Email</type>
</CustomField>