force-app/main/default/objects/Case/fields/EMAprobador__c.field-meta.xml
<CustomField>
    <fullName>EMAprobador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nombre de Jefe de Venta</description>
    <label>Jefe de Venta</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>&apos;00e5f000000vTSeAAM&apos;</value>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>&apos;00e5f000000vUSIAA2&apos;</value>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>&apos;00e5f000002uRWhAAM&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>