force-app/main/default/objects/Case/fields/EMCoordinador__c.field-meta.xml
<CustomField>
    <fullName>EMCoordinador__c</fullName>
    <label>Coordinador</label>
    <length>50</length>
    <type>Text</type>
</CustomField>