force-app/main/default/objects/Case/fields/EMCoordinadorAprueba__c.field-meta.xml
<CustomField>
    <fullName>EMCoordinadorAprueba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoordinadorAprueba</label>
    <type>Checkbox</type>
</CustomField>