force-app/main/default/objects/Case/fields/Fecha_de_llegada_del_equipo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_llegada_del_equipo__c</fullName>
    <label>Fecha de llegada del equipo</label>
    <type>Date</type>
</CustomField>