force-app/main/default/objects/Case/fields/Fecha_de_respuesta_taller__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_respuesta_taller__c</fullName>
    <label>Fecha de respuesta taller</label>
    <type>Date</type>
</CustomField>