force-app/main/default/objects/Case/fields/Fecha_ingreso_almacen__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ingreso_almacen__c</fullName>
    <label>Fecha ingreso almacén</label>
    <type>Date</type>
</CustomField>