force-app/main/default/objects/Case/fields/Fecha_Recepci_n_Bodega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recepci_n_Bodega__c</fullName>
    <label>Fecha Recepción Bodega</label>
    <type>DateTime</type>
</CustomField>