force-app/main/default/objects/Case/fields/Fecha_Recepcion_Taller__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recepcion_Taller__c</fullName>
    <label>Fecha Recepción Taller</label>
    <type>DateTime</type>
</CustomField>