force-app/main/default/objects/Case/fields/Fecha_Resolucion_Taller__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Resolucion_Taller__c</fullName>
    <label>Fecha Resolución Taller</label>
    <type>DateTime</type>
</CustomField>