force-app/main/default/objects/Case/fields/Ficha_Cargada__c.field-meta.xml
<CustomField>
    <fullName>Ficha_Cargada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ficha Cargada</label>
    <type>Checkbox</type>
</CustomField>