force-app/main/default/objects/Case/fields/Guia_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Guia_de_despacho__c</fullName>
    <label>Guía de despacho</label>
    <length>20</length>
    <type>Text</type>
</CustomField>