force-app/main/default/objects/Case/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <label>Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Todos</fullName>
                <default>true</default>
                <label>Todos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>