force-app/main/default/objects/Case/fields/Nombre_del_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Contacto__c</fullName>
    <label>Nombre del Contacto</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>