force-app/main/default/objects/Case/fields/NombreContacto__c.field-meta.xml
<CustomField>
    <fullName>NombreContacto__c</fullName>
    <label>Nombre Contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>