force-app/main/default/objects/Case/fields/Nota_de_credito__c.field-meta.xml
<CustomField>
    <fullName>Nota_de_credito__c</fullName>
    <label>Nota de crédito</label>
    <length>20</length>
    <type>Text</type>
</CustomField>