force-app/main/default/objects/Case/fields/Orden_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_Venta__c</fullName>
    <label>Orden de Venta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>