force-app/main/default/objects/Case/fields/Pendiente_devolucion__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_devolucion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pendiente devolución</label>
    <type>Checkbox</type>
</CustomField>