force-app/main/default/objects/Case/fields/Resumen_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Resumen_Resolucion__c</fullName>
    <label>Resumen Resolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>