force-app/main/default/objects/Case/fields/Telefono_2__c.field-meta.xml
<CustomField>
    <fullName>Telefono_2__c</fullName>
    <label>Telefono (2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>