force-app/main/default/objects/Case/fields/TelefonoContacto__c.field-meta.xml
<CustomField>
    <fullName>TelefonoContacto__c</fullName>
    <label>Telefono Contacto</label>
    <type>Phone</type>
</CustomField>